--- a/style/detalleProducto.css
+++ b/style/detalleProducto.css
@@ -146,19 +146,73 @@
 .theme-conteiner-list {
     padding: 10px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+
+    flex-direction: column;
+    /* align-items: center;
+    justify-content: space-between; */
 }
-.theme-conteiner-list:hover, .theme-conteiner-list:hover > .theme-conteiner-item{
+/* .theme-conteiner-list:hover > .theme-conteiner-item {
+    color: #5e3fcb;
+    cursor: pointer;
+} */
+.theme-conteiner-item:hover {
     color: #5e3fcb;
     cursor: pointer;
 }
+
+.theme-conteiner-item:hover ~ .theme-conteiner-item-subitem, .theme-conteiner-item-subitem:hover {
+    display: block;
+    transition: all .5s ease;
+
+}
+/* .theme-conteiner-item-subitem:hover{
+    display: block;
+} */
 .theme-conteiner-item {
     font-weight: 500;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-/* .theme-conteiner-item:hover {
+.theme-conteiner-item-subitem {
+    display: none;
+
+}
+
+.theme-conteiner-subitem-play {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #000;
+    padding: 5px;
+}
+.theme-conteiner-subitem-play:hover .little-text-theme {
     color: #5e3fcb
-} */
+}
+.theme-conteiner-subitem-play-cont {
+    display: flex;
+    align-items: center;
+}
+.icon-play {
+    width: 30px;
+    height: 30px;
+    background: rgb(245,244,248);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+.icon-play > .fa-play {
+    color: #5e3fcb;
+    font-size: 0.5em;
+}
+.little-text-theme {
+    font-size: 0.9em;
+    font-weight: 400;
+}
+
 
 @media (min-width: 1024px) {
     .conteiner-welcome {
