--- a/style/app.css
+++ b/style/app.css
@@ -33,6 +33,16 @@ a {
     margin-top: 6px;
     margin-bottom: 6px;
 }
+.my-2 {
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+.mt-2 {
+    margin-top: 12px;
+}
+.w-100 {
+    width: 100%;
+}
 .d-flex {
     display: flex;
 }
@@ -158,6 +168,16 @@ li {
 }
 .button:hover {
     cursor: pointer;
+}
+
+.btn-success {
+    color: #fff;
+    background-color: #19cb98;
+    border-color: #19cb98;
+}.btn-success:hover {
+    color: #fff;
+    background-color: #15ad81;
+    border-color: #14a27a;
 }
 
 
