--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,7 @@
     text-align: left;
     margin-top: 0px;
 }
-.btn-success {
+/* .btn-success {
     color: #fff;
     background-color: #19cb98;
     border-color: #19cb98;
@@ -17,7 +17,7 @@
     color: #fff;
     background-color: #15ad81;
     border-color: #14a27a;
-}
+} */
 .conteiner-img {
     margin-top: 25px;
 }
